fix header.special display on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -49,8 +49,19 @@ header.special .icon {
 	top: 1.5em;
 }
 
-header p {
+header.special h2 {
+	margin-bottom: 1;
 	text-align: center;
+}
+
+header.special p {
+	text-align: left;
+}
+
+header.special h2 + p {
+	margin-bottom: 0;
+	padding-bottom: 1.5em;
+	padding-top: 1.25em;
 }
 
 footer.major {
