--- a/css/style-narrower.css
+++ b/css/style-narrower.css
@@ -19,7 +19,18 @@ header.special:before, header.special:after {
 	width: 40%;
 }
 
+header.special h2 {
+	margin-bottom: 1;
+	text-align: center;
+}
+
+header.special p {
+	text-align: left;
+}
+
 header.special h2 + p {
+	margin-bottom: 0;
+	padding-bottom: 1.5em;
 	padding-top: 1.25em;
 }
 
