--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ header.special h2 {
 	text-align: center;
 }
 
-header.special  {
+header.special p {
 	text-align: left;
 }
 
